# fuschia

./: .env.example  .gitignore  AGENT_PROPERTIES_IMPLEMENTATION.md  AGENT_SAVE_FIX_SUMMARY.md  AGENT_TEMPLATE_FILE_LOADING.md  AUDIT_REPORT.md  CLAUDE.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  DATABASE_CONNECTION_FIX.md  DEBUG_CYPHER_ISSUE.md  FUSCHIA_PLATFORM_BLOG_ARTICLE.md  GIT_SETUP.md  GMAIL_MCP_SETUP.md  HCMPro_JobOffer_API.md  MONITORING_MODULE_SUMMARY.md  PRD.md  README.md  ROLE_MANAGEMENT_SUMMARY.md  SERVICENOW_SETUP.md  YAML_CANVAS_UPDATE_FEATURE.md  claude-build-commands.md  cleanup_backend.py  docker-compose.yml  package-lock.json  package.json  railway.json  setup.sh  test_agent_save_dialog.md  test_agent_template_file_upload.json  test_agent_template_save.js  test_template_service.ts  test_websocket_connection.html
backend/: .env.example  .env.postgres.example  .gitignore  CYPHER_ENDPOINT_README.md  DSPY_ASYNC_FIX.md  DSPY_MIGRATION_GUIDE.md  Dockerfile  INTENT_DETECTION_API.md  LANGCHAIN_SETUP_GUIDE.md  MLFLOW_AUTOLOG_TRACING.md  MLFLOW_SETUP.md  MLFLOW_TROUBLESHOOTING.md  NEO4J_SETUP.md  POSTGRES_MIGRATION_GUIDE.md  REMOVED_LEGACY_FILES.md  SYSTEM_TOOLS_SETUP.md  WORKFLOW_TRIGGER_API.md  add_memory_enhancement_column.py  agents.py  app.py  auth.py  check_compatibility.py  context_prompt_example.md  create_new_tables.py  create_workflow_execution_tables.py  db_schema.json  db_schema.txt  debug_websocket_user_mismatch.py  debug_workflow_templates.py  fix_db.py  fix_template_metadata.py  fix_workflow_execution_organization_ids.py  init_sqlite_db.py  (+29 more)
(+185 files in other folders)
